src/test/ui/parser/pat-tuple-4.stderr
error: `..X` range patterns are not supported
  --> $DIR/pat-tuple-4.rs:5:10
   |
LL |         (.. PAT) => {}
   |          ^^^^^^ help: try using the minimum value for the type: `MIN..PAT`

error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/pat-tuple-4.rs:5:10
   |
LL |         (.. PAT) => {}
   |          ^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/37854
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable

error[E0308]: mismatched types
  --> $DIR/pat-tuple-4.rs:11:30
   |
LL | const RECOVERY_WITNESS: () = 0;
   |                              ^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
